--- a/ruslanwooo.ipynb
+++ b/ruslanwooo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,15 +14,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4b/fs5kk0d122z5x0642bv_41q80000gn/T/ipykernel_84717/412825885.py:1: DtypeWarning: Columns (0,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv(\"COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv\").head(1500)\n"
+      "/var/folders/4b/fs5kk0d122z5x0642bv_41q80000gn/T/ipykernel_84717/1720775645.py:1: DtypeWarning: Columns (0,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  data = pd.read_csv(\"COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv\").head(100000)\n"
      ]
     },
     {
@@ -283,13 +283,13 @@
        "[5 rows x 74 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv(\"COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv\").head(1500)\n",
+    "data = pd.read_csv(\"COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv\").head(15000)\n",
     "clean = data\n",
     "clean = clean.drop(['total_beds_7_day_avg',\n",
     " 'all_adult_hospital_beds_7_day_avg',\n",
@@ -626,11 +626,332 @@
     }
    ],
    "source": [
-    "clean['total_patients_hospitalized_confirmed_covid_7_day_sum'] = clean['total_pediatric_patients_hospitalized_confirmed_covid_7_day_sum'].fillna(0) + clean['total_adult_patients_hospitalized_confirmed_covid_7_day_sum'].fillna(0)\n",
-    "clean = clean.drop(['total_pediatric_patients_hospitalized_confirmed_covid_7_day_sum', \n",
-    "                    'total_adult_patients_hospitalized_confirmed_covid_7_day_sum'], axis=1)\n",
+    "\n",
     "clean.head()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hospital_pk</th>\n",
+       "      <th>collection_week</th>\n",
+       "      <th>state</th>\n",
+       "      <th>ccn</th>\n",
+       "      <th>hospital_name</th>\n",
+       "      <th>address</th>\n",
+       "      <th>city</th>\n",
+       "      <th>zip</th>\n",
+       "      <th>hospital_subtype</th>\n",
+       "      <th>fips_code</th>\n",
+       "      <th>...</th>\n",
+       "      <th>all_pediatric_inpatient_bed_occupied_7_day_sum</th>\n",
+       "      <th>all_pediatric_inpatient_beds_7_day_sum</th>\n",
+       "      <th>previous_day_admission_pediatric_covid_confirmed_0_4_7_day_sum</th>\n",
+       "      <th>previous_day_admission_pediatric_covid_confirmed_12_17_7_day_sum</th>\n",
+       "      <th>previous_day_admission_pediatric_covid_confirmed_5_11_7_day_sum</th>\n",
+       "      <th>previous_day_admission_pediatric_covid_confirmed_unknown_7_day_sum</th>\n",
+       "      <th>staffed_icu_pediatric_patients_confirmed_covid_7_day_sum</th>\n",
+       "      <th>staffed_pediatric_icu_bed_occupancy_7_day_sum</th>\n",
+       "      <th>total_staffed_pediatric_icu_beds_7_day_sum</th>\n",
+       "      <th>total_patients_hospitalized_confirmed_covid_7_day_sum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>052052</td>\n",
+       "      <td>2020/05/29</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>052052</td>\n",
+       "      <td>KINDRED HOSPITAL RIVERSIDE</td>\n",
+       "      <td>2224 MEDICAL CENTER DRIVE</td>\n",
+       "      <td>PERRIS</td>\n",
+       "      <td>92571.0</td>\n",
+       "      <td>Long Term</td>\n",
+       "      <td>6065.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>070038</td>\n",
+       "      <td>2020/04/24</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>070038</td>\n",
+       "      <td>CONNECTICUT HOSPICE INC,THE</td>\n",
+       "      <td>100 DOUBLE BEACH ROAD</td>\n",
+       "      <td>BRANFORD</td>\n",
+       "      <td>6405.0</td>\n",
+       "      <td>Short Term</td>\n",
+       "      <td>9009.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>100034</td>\n",
+       "      <td>2020/05/01</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>100034</td>\n",
+       "      <td>MOUNT SINAI MEDICAL CENTER OF FLORIDA, INC</td>\n",
+       "      <td>4300 ALTON RD</td>\n",
+       "      <td>MIAMI BEACH</td>\n",
+       "      <td>33140.0</td>\n",
+       "      <td>Short Term</td>\n",
+       "      <td>12086.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>100069</td>\n",
+       "      <td>2020/05/15</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>100069</td>\n",
+       "      <td>ADVENTHEALTH CARROLLWOOD</td>\n",
+       "      <td>7171 N DALE MABRY HWY</td>\n",
+       "      <td>TAMPA</td>\n",
+       "      <td>33614.0</td>\n",
+       "      <td>Short Term</td>\n",
+       "      <td>12057.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>100070</td>\n",
+       "      <td>2020/04/24</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>100070</td>\n",
+       "      <td>SHOREPOINT HEALTH VENICE</td>\n",
+       "      <td>540 THE RIALTO</td>\n",
+       "      <td>VENICE</td>\n",
+       "      <td>34285.0</td>\n",
+       "      <td>Short Term</td>\n",
+       "      <td>12115.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 73 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  hospital_pk collection_week state     ccn  \\\n",
+       "0      052052      2020/05/29    CA  052052   \n",
+       "1      070038      2020/04/24    CT  070038   \n",
+       "2      100034      2020/05/01    FL  100034   \n",
+       "3      100069      2020/05/15    FL  100069   \n",
+       "4      100070      2020/04/24    FL  100070   \n",
+       "\n",
+       "                                hospital_name                    address  \\\n",
+       "0                  KINDRED HOSPITAL RIVERSIDE  2224 MEDICAL CENTER DRIVE   \n",
+       "1                 CONNECTICUT HOSPICE INC,THE      100 DOUBLE BEACH ROAD   \n",
+       "2  MOUNT SINAI MEDICAL CENTER OF FLORIDA, INC              4300 ALTON RD   \n",
+       "3                    ADVENTHEALTH CARROLLWOOD      7171 N DALE MABRY HWY   \n",
+       "4                    SHOREPOINT HEALTH VENICE             540 THE RIALTO   \n",
+       "\n",
+       "          city      zip hospital_subtype  fips_code  ...  \\\n",
+       "0       PERRIS  92571.0        Long Term     6065.0  ...   \n",
+       "1     BRANFORD   6405.0       Short Term     9009.0  ...   \n",
+       "2  MIAMI BEACH  33140.0       Short Term    12086.0  ...   \n",
+       "3        TAMPA  33614.0       Short Term    12057.0  ...   \n",
+       "4       VENICE  34285.0       Short Term    12115.0  ...   \n",
+       "\n",
+       "   all_pediatric_inpatient_bed_occupied_7_day_sum  \\\n",
+       "0                                             NaN   \n",
+       "1                                             NaN   \n",
+       "2                                             NaN   \n",
+       "3                                             NaN   \n",
+       "4                                             NaN   \n",
+       "\n",
+       "   all_pediatric_inpatient_beds_7_day_sum  \\\n",
+       "0                                     NaN   \n",
+       "1                                     NaN   \n",
+       "2                                     NaN   \n",
+       "3                                     NaN   \n",
+       "4                                     NaN   \n",
+       "\n",
+       "   previous_day_admission_pediatric_covid_confirmed_0_4_7_day_sum  \\\n",
+       "0                                                NaN                \n",
+       "1                                                NaN                \n",
+       "2                                                NaN                \n",
+       "3                                                NaN                \n",
+       "4                                                NaN                \n",
+       "\n",
+       "   previous_day_admission_pediatric_covid_confirmed_12_17_7_day_sum  \\\n",
+       "0                                                NaN                  \n",
+       "1                                                NaN                  \n",
+       "2                                                NaN                  \n",
+       "3                                                NaN                  \n",
+       "4                                                NaN                  \n",
+       "\n",
+       "   previous_day_admission_pediatric_covid_confirmed_5_11_7_day_sum  \\\n",
+       "0                                                NaN                 \n",
+       "1                                                NaN                 \n",
+       "2                                                NaN                 \n",
+       "3                                                NaN                 \n",
+       "4                                                NaN                 \n",
+       "\n",
+       "   previous_day_admission_pediatric_covid_confirmed_unknown_7_day_sum  \\\n",
+       "0                                                NaN                    \n",
+       "1                                                NaN                    \n",
+       "2                                                NaN                    \n",
+       "3                                                NaN                    \n",
+       "4                                                NaN                    \n",
+       "\n",
+       "   staffed_icu_pediatric_patients_confirmed_covid_7_day_sum  \\\n",
+       "0                                                NaN          \n",
+       "1                                                NaN          \n",
+       "2                                                NaN          \n",
+       "3                                                NaN          \n",
+       "4                                                NaN          \n",
+       "\n",
+       "   staffed_pediatric_icu_bed_occupancy_7_day_sum  \\\n",
+       "0                                            NaN   \n",
+       "1                                            NaN   \n",
+       "2                                            NaN   \n",
+       "3                                            NaN   \n",
+       "4                                            NaN   \n",
+       "\n",
+       "   total_staffed_pediatric_icu_beds_7_day_sum  \\\n",
+       "0                                         NaN   \n",
+       "1                                         NaN   \n",
+       "2                                         NaN   \n",
+       "3                                         NaN   \n",
+       "4                                         NaN   \n",
+       "\n",
+       "   total_patients_hospitalized_confirmed_covid_7_day_sum  \n",
+       "0                                                0.0      \n",
+       "1                                                0.0      \n",
+       "2                                                0.0      \n",
+       "3                                                0.0      \n",
+       "4                                                0.0      \n",
+       "\n",
+       "[5 rows x 73 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def ifZero(x):\n",
+    "    if x < 0:\n",
+    "        return 0\n",
+    "    return x\n",
+    "\n",
+    "clean['total_patients_hospitalized_confirmed_covid_7_day_sum'] = clean['total_pediatric_patients_hospitalized_confirmed_covid_7_day_sum'].apply(ifZero).fillna(0) + clean['total_adult_patients_hospitalized_confirmed_covid_7_day_sum'].apply(ifZero).fillna(0)\n",
+    "clean = clean.drop(['total_pediatric_patients_hospitalized_confirmed_covid_7_day_sum', \n",
+    "                    'total_adult_patients_hospitalized_confirmed_covid_7_day_sum'], axis=1)\n",
+    "clean.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean['total_patients_hospitalized_confirmed_covid_7_day_sum'] = clean['total_pediatric_patients_hospitalized_confirmed_covid_7_day_sum'].apply(ifZero).fillna(0) + clean['total_adult_patients_hospitalized_confirmed_covid_7_day_sum'].apply(ifZero).fillna(0)\n",
+    "clean = clean.drop(['total_pediatric_patients_hospitalized_confirmed_covid_7_day_sum', \n",
+    "                    'total_adult_patients_hospitalized_confirmed_covid_7_day_sum'], axis=1)\n",
+    "clean.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ifZero(x):\n",
+    "    if x < 0:\n",
+    "        return 0\n",
+    "    return x\n",
+    "\n",
+    "clean['total_patients_hospitalized_confirmed_covid_7_day_sum'] = clean['total_pediatric_patients_hospitalized_confirmed_covid_7_day_sum'].apply(ifZero).fillna(0) + clean['total_adult_patients_hospitalized_confirmed_covid_7_day_sum'].apply(ifZero).fillna(0)\n",
+    "clean = clean.drop(['total_pediatric_patients_hospitalized_confirmed_covid_7_day_sum', \n",
+    "                    'total_adult_patients_hospitalized_confirmed_covid_7_day_sum'], axis=1)\n",
+    "clean.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
