--- a/ruslanwooo.ipynb
+++ b/ruslanwooo.ipynb
@@ -1470,10 +1470,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean['inpatient_beds_used_covid_7_day_sum'] = clean['inpatient_beds_used_covid_7_day_sum'].apply(ifZero).fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleanV2 = clean\n",
+    "cleanV2.to_csv('cleanV2.csv')"
+   ]
   }
  ],
  "metadata": {
