--- a/ruslanwooo.ipynb
+++ b/ruslanwooo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "[5 rows x 74 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
        "[5 rows x 74 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
        "[5 rows x 73 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +956,7 @@
        "      <th>staffed_pediatric_icu_bed_occupancy_7_day_sum</th>\n",
        "      <th>total_staffed_pediatric_icu_beds_7_day_sum</th>\n",
        "      <th>total_patients_hospitalized_confirmed_covid_7_day_sum</th>\n",
-       "      <th>total_inpatient_beds</th>\n",
+       "      <th>total_hospital_inpatient_beds_7_day_sum</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1163,17 +1163,24 @@
        "3                                         NaN   \n",
        "4                                         NaN   \n",
        "\n",
-       "   total_patients_hospitalized_confirmed_covid_7_day_sum  total_inpatient_beds  \n",
-       "0                                                0.0                       0.0  \n",
-       "1                                                0.0                       0.0  \n",
-       "2                                                0.0                       0.0  \n",
-       "3                                                0.0                       0.0  \n",
-       "4                                                0.0                       0.0  \n",
+       "   total_patients_hospitalized_confirmed_covid_7_day_sum  \\\n",
+       "0                                                0.0       \n",
+       "1                                                0.0       \n",
+       "2                                                0.0       \n",
+       "3                                                0.0       \n",
+       "4                                                0.0       \n",
+       "\n",
+       "   total_hospital_inpatient_beds_7_day_sum  \n",
+       "0                                      0.0  \n",
+       "1                                      0.0  \n",
+       "2                                      0.0  \n",
+       "3                                      0.0  \n",
+       "4                                      0.0  \n",
        "\n",
        "[5 rows x 72 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1237,7 @@
        "      <th>staffed_pediatric_icu_bed_occupancy_7_day_sum</th>\n",
        "      <th>total_staffed_pediatric_icu_beds_7_day_sum</th>\n",
        "      <th>total_patients_hospitalized_confirmed_covid_7_day_sum</th>\n",
-       "      <th>total_inpatient_beds</th>\n",
+       "      <th>total_hospital_inpatient_beds_7_day_sum</th>\n",
        "      <th>total_patients_hospitalized_confirmed_and_suspected_covid_7_day_sum</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1438,12 +1445,12 @@
        "3                                                0.0       \n",
        "4                                                0.0       \n",
        "\n",
-       "   total_inpatient_beds  \\\n",
-       "0                   0.0   \n",
-       "1                   0.0   \n",
-       "2                   0.0   \n",
-       "3                   0.0   \n",
-       "4                   0.0   \n",
+       "   total_hospital_inpatient_beds_7_day_sum  \\\n",
+       "0                                      0.0   \n",
+       "1                                      0.0   \n",
+       "2                                      0.0   \n",
+       "3                                      0.0   \n",
+       "4                                      0.0   \n",
        "\n",
        "   total_patients_hospitalized_confirmed_and_suspected_covid_7_day_sum  \n",
        "0                                                0.0                    \n",
@@ -1455,7 +1462,7 @@
        "[5 rows x 71 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1470,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1479,19 +1486,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleanV2 = clean\n",
-    "cleanV2.to_csv('cleanV2.csv')"
+    "clean['all_adult_hospital_inpatient_bed_occupied_7_day_sum'] = clean['all_adult_hospital_inpatient_bed_occupied_7_day_sum'].apply(ifZero).fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean['all_adult_hospital_inpatient_bed_occupied_7_day_sum'] = clean['all_adult_hospital_inpatient_bed_occupied_7_day_sum'].apply(ifZero).fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean['inpatient_beds_7_day_sum'] = clean['inpatient_beds_7_day_sum'].apply(ifZero).fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleanV3 = clean\n",
+    "cleanV3.to_csv('cleanV3.csv')"
    ]
   }
  ],
