--- a/eric.ipynb
+++ b/eric.ipynb
@@ -2506,11 +2506,7 @@
     "  ax = plt.subplot(4,2,i+1)\n",
     "  plt.scatter(cleaner[factors[i]], cleaner['inpatient_beds_used_covid_7_day_sum'])\n",
     "  ax.set_title(factors[i])\n",
-    "  plt.tight_layout()\n",
-    "\n",
-    "  \n",
-    "#plt.xlim([-100,500])\n",
-    "#plt.ylim([-100,1000])"
+    "  plt.tight_layout()"
    ]
   },
   {
