fixed ml score array

--- a/eric.ipynb
+++ b/eric.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0x/j2sfsgp167vf2w83dyjt6_nm0000gn/T/ipykernel_2575/4252877247.py:1: DtypeWarning: Columns (0,3) have mixed types. Specify dtype option on import or set low_memory=False.\n"
+      "/var/folders/0x/j2sfsgp167vf2w83dyjt6_nm0000gn/T/ipykernel_7830/4252877247.py:1: DtypeWarning: Columns (0,3) have mixed types. Specify dtype option on import or set low_memory=False.\n"
      ]
     },
     {
@@ -294,7 +294,7 @@
        "[5 rows x 128 columns]"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1229,7 @@
        "[5 rows x 74 columns]"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1768,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2221,7 +2221,7 @@
        "[10 rows x 72 columns]"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2386,7 +2386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2399,10 +2399,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fa9dc1f2d30>"
+       "<matplotlib.collections.PathCollection at 0x7f85c9bc7790>"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2423,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2490,7 +2490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2555,7 +2555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2720,7 +2720,7 @@
        "4                                                0.0       "
       ]
      },
-     "execution_count": 306,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2732,7 +2732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2881,7 +2881,15 @@
     "  x_train, x_test, y_train, y_test = train_test_split(input, output, test_size = 0.30, random_state = 0)\n",
     "  logisticRegr = LogisticRegression()\n",
     "  logisticRegr.fit(x_train, y_train)\n",
-    "  scores.append(logisticRegr)"
+    "  scores.append({'graph': logisticRegr, \n",
+    "                 'x_train': x_train, \n",
+    "                 'y_train': y_train,\n",
+    "                 'x_test': x_test,\n",
+    "                 'y_test': y_test,\n",
+    "                 'input': input,\n",
+    "                 'output': output, \n",
+    "                 'score': logisticRegr.score(x_test, y_test)})\n",
+    "  print(\"Completed: \", factor)"
    ]
   },
   {
@@ -2911,6 +2919,21 @@
     "for score in scores: \n",
     "  print(score.score())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completed:  ['inpatient_beds_used_covid_7_day_sum']\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
