--- a/ruslanwooo.ipynb
+++ b/ruslanwooo.ipynb
@@ -14,34 +14,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4b/fs5kk0d122z5x0642bv_41q80000gn/T/ipykernel_94127/370802037.py:1: DtypeWarning: Columns (0,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv(\"COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv\").head(70000)\n"
+      "/var/folders/4b/fs5kk0d122z5x0642bv_41q80000gn/T/ipykernel_94127/229701021.py:1: DtypeWarning: Columns (0,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  data = pd.read_csv(\"COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv\").head(700000)\n"
      ]
     }
    ],
    "source": [
-    "data = pd.read_csv(\"COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv\").head(70000)\n",
+    "data = pd.read_csv(\"COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv\").head(700000)\n",
     "\n",
-    "def ifZero(x):\n",
+    "\n",
+    "\n",
+    "\n",
+    "clean = data[['inpatient_beds_used_covid_7_day_sum',\n",
+    "'inpatient_beds_used_7_day_sum',\n",
+    "'all_adult_hospital_inpatient_bed_occupied_7_day_sum',\n",
+    "'inpatient_beds_7_day_sum',\n",
+    "'total_patients_hospitalized_confirmed_influenza_7_day_sum',\n",
+    "'previous_day_admission_adult_covid_confirmed_7_day_sum']]\n",
+    "\n",
+    "clean.head(20)\n",
+    "\n",
+    "noNan = clean.dropna()\n",
+    "\n",
+    "\n",
+    "for col in noNan.columns:\n",
     "    try:\n",
-    "        if x < 0:\n",
-    "            return 0\n",
-    "        return x\n",
+    "        if noNan[col].dtype < 0:\n",
+    "            noNan = noNan.drop(col, axis=0)\n",
+    "        else:\n",
+    "            pass\n",
     "    except TypeError:\n",
-    "        return x\n",
-    "    \n",
-    "\n",
-    "for col in data.columns:\n",
-    "    # turn any nul values into 0 and change any numbers below 0 to 0\n",
-    "    data[col] = data[col].fillna(0).apply(ifZero)\n",
-    "    \n"
+    "        pass\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   0.,   29.,   59., ..., 6145., 9395., 7406.])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "noNan['all_adult_hospital_inpatient_bed_occupied_7_day_sum'].unique()"
    ]
   },
   {
@@ -1592,12 +1623,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/4b/fs5kk0d122z5x0642bv_41q80000gn/T/ipykernel_94127/390653069.py:1: DtypeWarning: Columns (0,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  data = pd.read_csv(\"COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv\").head(700000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.read_csv(\"COVID-19_Reported_Patient_Impact_and_Hospital_Capacity_by_Facility.csv\").head(700000)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "clean = data[['inpatient_beds_used_covid_7_day_sum',\n",
+    "'inpatient_beds_used_7_day_sum',\n",
+    "'all_adult_hospital_inpatient_bed_occupied_7_day_sum',\n",
+    "'inpatient_beds_7_day_sum',\n",
+    "'total_patients_hospitalized_confirmed_influenza_7_day_sum',\n",
+    "'previous_day_admission_adult_covid_confirmed_7_day_sum']]\n",
+    "\n",
+    "clean.head(20)\n",
+    "\n",
+    "data = clean.dropna()\n",
+    "\n",
+    "for col in data.columns:\n",
+    "    try:\n",
+    "        data = data[data[col] >= 0]\n",
+    "    except TypeError:\n",
+    "        pass\n",
+    "    \n",
+    "cleanV4 = data\n",
+    "cleanV4.to_csv('cleanV4.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleanV3 = clean\n",
-    "cleanV3.to_csv('cleanV3.csv')"
+    "cleanV4.to_csv('cleanV5.csv')"
    ]
   }
  ],
